--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,10 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src='https://cdn.firebase.com/v0/firebase.js'></script>
         <script src="bower_components/angularfire/angularfire.min.js"></script>
+        <script type='text/javascript'src='https://cdn.firebase.com/v0/firebase-simple-login.js'>
+        </script>
 
         <!-- endbuild -->
 
