--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/factories.js"></script>
         <script src="scripts/controllers/main.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
