hack to finish within scope

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,9 @@
         <script src="bower_components/angularfire/angularfire.min.js"></script>
         <script type='text/javascript'src='https://cdn.firebase.com/v0/firebase-simple-login.js'>
         </script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.2/dropbox.min.js">
+</script>
+
 
         <!-- endbuild -->
 
