--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,20 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">WhenDo</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="#/profile">Profile</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
